2014-08-01  Jean-Louis Martineau <martineau@zmanda.com>
	* client-src/senddiscover.c: Fix.
	* common-src/ammessage.c: Fix json output.
	* perl/Amanda/Message.pm: Add Amanda::Service::Message.
	* perl/Amanda/Rest/Amanda/bin/app.pl.in: Add
	  /amanda/v1.0/services/discover URL
	* perl/Makefile.am: Add Amanda/Service.pm and Amanda/Rest/Services.pm
	* perl/Amanda/Service.pm: New perl module
	* perl/Amanda/Rest/Services.pm: REST API for deicover service.

2014-08-01  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Application.swg (known_commands: Add discover.
	* perl/Amanda/Message.pm: Add Amanda::Amvmware::Message.

2014-07-31  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/ammessage.c: Fix typedef.

2014-07-31  Jean-Louis Martineau <martineau@zmanda.com>
	* config/amanda/amanda_configure.m4: Call AMANDA_REST_HOOK
	* perl/Amanda/Constants.pm.in.src: Add $REST_HOOK_DIR.
	* config/amanda/rest-hook.m4 (AMANDA_REST_HOOK): --with-rest-hook
	* perl/Amanda/Rest/Amanda/bin/app.pl.in: Load rest-hook

2014-07-31  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/conffile.c, server-src/amcheck.c: Fix bug found by
	  coverity.

2014-07-31  Jean-Louis Martineau <martineau@zmanda.com>
	* amandad-src/amandad.c: Handle senddiscover service.
	* client-src/Makefile.am: Build senddiscover.
	* client-src/client_util.c: Parse DISCOVER backup support option.
	* client-src/client_util.h (backup_support_option_t): Add discover.
	* client-src/senddiscover.c: New client service.
	* common-src/Makefile.am: Add ammessage.
	* common-src/ammessage.c: Add struct and function to handle Message
	  and print them in JSON format.
	* common-src/ammessage.h: Add prototype.
	* common-src/conffile.c: Fix json indentation.
	* perl/Amanda/Message.pm: Add senddiscover.

2014-07-31  Jean-Louis Martineau <martineau@zmanda.com>
	* config/amanda/dumpers.m4: Improve error message for bsdtar.

2014-07-30  Jean-Louis Martineau <martineau@zmanda.com>